[package]
name = "vtfTrans-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
binrw = "0.11.2"
bitmask-enum = "2.2.1"
clap = { version = "4.3.11", features = ["derive"] }
modular-bitfield = "0.11.2"
